@@ -136,8 +136,18 @@
           <archive>
             <manifest>
               <mainClass>com.junbeom.benchmark.UniqueIdBenchmark</mainClass>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>dependency/</classpathPrefix>
             </manifest>
           </archive>
+          <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+              --add-opens java.base/java.io=ALL-UNNAMED
+              --add-opens java.base/java.nio=ALL-UNNAMED
+              --add-opens java.base/sun.security.action=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
